--- a/celso1.css
+++ b/celso1.css
@@ -7,6 +7,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Expletus+Sans);
 
+@import url(https://fonts.googleapis.com/css?family=Quicksand);
+
 
 /*large screen responsive*/
 @media screen and (max-width:600px){
@@ -209,7 +211,7 @@ a {
 	font-size: 33px;
 	font-family: 'Italiana', serif;
 	color: black;
-	margin-left: 30%;
+	margin-left: 35%;
 	padding-top: 3%;
 }
 
@@ -262,16 +264,30 @@ margin: 0 auto;
 	align-items: center;
 }
 .side > .icons {
-	margin-left: 17%;
+	margin-left: 8%;
 	margin-top: -5%;
 	padding-top: 3%;
 }
-.title {
+.title1 {
+	text-align: center;
+	font-size: 18px;
+	margin-right: -2%;
+  padding-bottom: 5%;
+  margin-top: -3%;
+}
+.title2 {
 	text-align: center;
 	font-size: 18px;
 	margin-right: 5%;
   padding-bottom: 5%;
   margin-top: -3%;
+}
+.author{
+	font-size: 15px;
+	font-weight: bold;
+	font-family: 'Poiret One', cursive;
+	color: gray;
+	float:right;
 }
 
 /*section 3*/
@@ -391,28 +407,63 @@ background-color: #94A2A2;
   font-size: 40px;
   color: black;
   margin-left: 40%;
-	padding-top: 8%;
+	padding-top: 6%;
   text-transform: uppercase;
 }
 .fa-comments-o {
   color: #347EDE;
 }
+.email {
+	font-size: 28px;
+	/*font-family: 'Quicksand', sans-serif;*/
+	font-family: 'Poiret One', cursive;
+	font-weight: bold;
+	text-align: center;
+	margin-left: 4%;
+	margin-top: 3%;
+	padding-top: 3%;
+	color: black;
+	/*text-shadow: 3px 1px 30px rgb(3, 5, 12);*/
+}
 
 /*scroll up*/
-.scroll-up {
+.note {
+	font-size: 28px;
+	/*font-family: 'Quicksand', sans-serif;*/
+	font-family: 'Poiret One', cursive;
+	font-weight: bold;
+	text-align: center;
+	/*text-decoration: underline;*/
+	margin-left: 4%;
+	margin-top: 1%;
+	color: black;
+	/*text-shadow: 3px 1px 30px rgb(3, 5, 12);*/
+}
+.email > a:hover {
+	color: white;
+	text-shadow: 3px 1px 30px rgb(3, 5, 12);
+	-webkit-transition: all 1.5s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+}
+.note > a:hover {
+	color: white;
+	text-shadow: 3px 1px 30px rgb(3, 5, 12);
+	-webkit-transition: all 1.5s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+}
+/*.scroll-up {
 	margin-left: 50%;
   font-size: 50px;
-  padding-top: 7%;
+  padding-top: .5%;
 }
 .scroll-up a {
 	color: white;
 }
 .fa-angle-double-up:hover {
 	color: #347EDE;
-  /*-webkit-transition: all 1.5s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;*/
-}
+}*/
 
 #hrA {
   margin-top: 136%;
@@ -429,46 +480,3 @@ background-color: #94A2A2;
   font-family: 'MyWebFont', Avenir;
   color: rgb(150, 145, 145);
 }
-
-/*.contact {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-  color: #347EDE;
-  padding: 10px;
-}
-.input {
-  font-family: 'MyWebFont', Optima;
-  font-size: 15px;
-  padding: 5px;
-  width: 260px;
-  color: #347EDE;
-  border-style: outset;*/
-  /*cursor: copy;*/
-/*}*/
-/*#message {
-  font-family: 'MyWebFont', Optima;
-  font-size: 16px;
-  padding: 5px;
-  width: 400px;
-  color: #347EDE;
-  border-style: outset;
-}
-
-#submit {
-  font-family: 'MyWebFont', Andale Mono;
-  font-size: 15px;
-  padding: 5px;
-  padding-right: 10px;
-  border-radius: 5px;
-  margin-left: 435px;
-  margin-top: 25px;
-}
-#submit > :hover {
-  color: yellow;
-}
-#hrC {
-  border: 0;
-  height: 1px;
-  margin-top: 50px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-}*/
