--- a/celso1.css
+++ b/celso1.css
@@ -60,6 +60,8 @@
 	}
 }
 
+/*---------------------------
+
 /*small screen*/
 @media screen and (max-width:320px){
 
@@ -92,6 +94,8 @@
 	}
 }
 
+/*----------------------------
+
 /*normal CSS*/
 html {
 width: 100%;
@@ -116,6 +120,9 @@ section {
 	width: 100%;
 	height: 100%;
 }
+
+/*------------------------------*
+
 /*greeting time*/
 h3 {
 	font-size: 20px;
@@ -129,6 +136,8 @@ h3 {
 	padding-top: 0.20%;
 	padding-bottom: 0.25%;
 }
+
+/*-----------------------------*/
 
 /*title*/
 .name {
@@ -155,6 +164,8 @@ h3 {
   float: left;
   margin-top: 17.5%;
 }
+
+/*-----------------------------*/
 
 /*social media css*/
 ul {
@@ -189,6 +200,8 @@ a {
     transform: translate(0, 0);
 }
 
+/*-----------------------------*/
+
 /*scroll down*/
 .scroll-down {
 	margin-left: 50%;
@@ -204,6 +217,8 @@ a {
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;*/
 }
+
+/*-----------------------------*/
 
 /*section 2*/
 .about {
@@ -290,6 +305,8 @@ margin: 0 auto;
 	float:right;
 }
 
+/*-----------------------------*/
+
 /*section 3*/
 #row3 {
 display: block;
@@ -355,6 +372,8 @@ background-color: #595A5A;
 	color: yellow;
 }
 
+/*----------------------------*/
+
 /*testimonials*/
 #row3A {
 	display: block;
@@ -394,12 +413,12 @@ background-color: #595A5A;
 	height: 350px;
 	margin: 0 0 10px 0;
 	border-radius: 5px;
-	/*border-style: outset;*/
 	border-style: solid;
 	border-width: 2px;
 	border-color: yellow;
 }
 
+/*-----------------------*/
 
 /*section 4*/
 #row4 {
@@ -430,8 +449,9 @@ background-color: #94A2A2;
 	margin-top: 3%;
 	padding-top: 3%;
 	color: black;
-	/*text-shadow: 3px 1px 30px rgb(3, 5, 12);*/
 }
+
+/*-----------------------------*/
 
 /*scroll up*/
 .note {
@@ -443,7 +463,7 @@ background-color: #94A2A2;
 	/*text-decoration: underline;*/
 	margin-left: 4%;
 	margin-top: 1%;
-	color: black;	
+	color: black;
 }
 
 .email > a:hover {
