--- a/celso1.css
+++ b/celso1.css
@@ -415,7 +415,7 @@ background-color: #595A5A;
 	border-radius: 5px;
 	border-style: solid;
 	border-width: 2px;
-	border-color: yellow;
+	border-color: black;
 }
 
 /*-----------------------*/
